--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ body {
 
 .ambiente {
     border: 1px solid #0099ff;
-    
+
     margin-left: 50%;
     transform: translateX(-50%);
     position: relative;
 
     display: flex;
-    
+    justify-content: center;
     width: 500px;
     height: 900px;
 }
@@ -24,6 +24,18 @@ body {
 .profile {
     border: 1px solid red;
 
-    width: 50px;
-    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    width: 110px;
+    height: 110px;
+}
+
+.profile-pic {
+    border: 1px solid white;
+
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
