--- a/style.css
+++ b/style.css
@@ -4,12 +4,17 @@
     box-sizing: border-box;
 }
 
+/* Variáveis */
+:root {
+    --borda-cor: 1px solid #0099ff;
+}
+
 body {
-    background-color: #303031;
+
 }
 
 .ambiente {
-    border: 1px solid #0099ff;
+    border: var(--borda-cor);
 
     margin-left: 50%;
     transform: translateX(-50%);
@@ -21,20 +26,43 @@ body {
     height: 900px;
 }
 
-.profile {
-    border: 1px solid red;
+.header {
+    background-color: #4e51bf;
+    position: fixed;
+    border: var(--borda-cor);
+    border-radius: 60px;
+    width: 100%;
+    height: 300px;
+}
 
+.profile-box {
+    border: var(--borda-cor);
+    
+   
+    left: 0;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
-    margin-top: 50px;
-    width: 110px;
-    height: 110px;
+    margin-top: 170px;
+    width: 100%;
+    height:250px;
+    z-index: 99;
+}
+
+.profile {
+    border: var(--borda-cor);
+    background-color: #ffe9ce;
+    border-radius: 60px;
+    left: 0;
+
+    width: 400px;
+    height:250px;
+    z-index: 99;
 }
 
 .profile-pic {
-    border: 1px solid white;
-
+    border: var(--borda-cor);
+    
     width: 100px;
     height: 100px;
     border-radius: 50%;
