--- a/style.css
+++ b/style.css
@@ -29,10 +29,21 @@ body {
 .header {
     background-color: #4e51bf;
     position: fixed;
+    display: flex;
+    justify-content: space-around;
     border: var(--borda-cor);
     border-radius: 60px;
     width: 100%;
     height: 300px;
+}
+
+.profile-pic {
+    border: var(--borda-cor);
+    margin-top: 20px;
+    width:80px;
+    height: 80px;
+    border-radius: 50%;
+    
 }
 
 .profile-box {
@@ -60,10 +71,3 @@ body {
     z-index: 99;
 }
 
-.profile-pic {
-    border: var(--borda-cor);
-    
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-}
