--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@
 }
 
 body {
-
+    background-color: #4e51bf;
 }
 
 .ambiente {
     border: var(--borda-cor);
-
+    background-color: white;
     margin-left: 50%;
     transform: translateX(-50%);
     position: relative;
@@ -39,7 +39,9 @@ body {
     justify-content: center;
     align-items: top;
     border: var(--borda-cor);
-    border-radius: 60px;
+    border-bottom-left-radius: 60px;
+    border-bottom-right-radius: 60px;
+    
     width: 100%;
     height: 300px;
 }
@@ -51,7 +53,8 @@ body {
     align-items: center;
     justify-content: space-between;
     height:100px;
-    width: 100%;
+    width: 90%;
+    margin-top: 10px;
 }
 
 .menu {
@@ -65,7 +68,13 @@ body {
     width:80px;
     height: 80px;
     border-radius: 50%;
-  
+    background-size: cover;
+    background-position: center;
+
+}
+/* Link da foto baseada no perfil do Instagram */
+.profile-pic {
+    background-image: url('URL_DA_IMAGEM');
 }
 
 .profile-box {
