--- a/style.css
+++ b/style.css
@@ -18,26 +18,39 @@
 
 body {
     display: flex;
+    justify-content: center;
     background-color: #e2e5ff;
     font-family: "Rubik";
 }
 
 .ambiente {
-    overflow: hidden;
+    /* overflow: hidden; */
     
     border-radius: 60px;
     box-shadow: 1px 1px 50px 0px rgb(99, 96, 96);
     background-color: white;
     margin-top: 5px;
-    margin-left: 50%;
-    transform: translateX(-50%);
+
     position: relative;
 
     display: flex;
     justify-content: center;
     
-    width: 100vw;
-    height: 900px;
+    width: 80vw;
+
+    height: 850px;
+}
+
+/* Body e .ambiente para telas menores que 600 pixels */
+@media (max-width: 600px) {
+    body {
+        background-color: white;
+    }
+    .ambiente {
+        margin-top: 0;
+        box-shadow: none;
+        width: 100vw;
+    }
 }
 
 .header {
@@ -47,15 +60,28 @@ body {
     justify-content: center;
     align-items: top;
     border: var(--borda-cor);
+    
+    border-top-right-radius: 60px;
+    border-top-left-radius: 60px;
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
     
-    width: 100%;
+    width: 80vw;
     height: 300px;
+}
+
+/* Header para telas menores que 768 pixels */
+@media (max-width: 600px) {
+    .header {
+        border-top-right-radius: 0px;
+        border-top-left-radius: 0px;
+        width: 100vw;
+    }
 }
 
 .header section {
     border: var(--borda-cor);
+
     padding: 20px;
     display: flex;
     align-items: center;
@@ -98,7 +124,7 @@ body {
 }
 
 .profile-area {
-    
+
     overflow: hidden;
     display: flex;
     align-items: end;
@@ -112,18 +138,22 @@ body {
     z-index: 99;
 }
 
+
+
 .lua .figura {
+
     left: 0;
     top: 350px;
     position: absolute;
     width: 70px;
     height: 100px;
     background-color: #ffe9ce;
-    z-index: -99;
+
 }
 
 .lua .modelador {
-    left: 9px;
+
+    left: 10px;
     top: 381px;
     border-radius: 50%;
     position: absolute;
@@ -131,7 +161,7 @@ body {
     height: 120px;
     background-color: white;
     transform: rotate(80deg);
-    z-index: -99;
+
 }
 
 /* Design Circles */
@@ -240,7 +270,7 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 45px 34px;
-    margin-top: 410px;
+    margin-top: 380px;
     width: 450px;
     height: 450px;
 }
