--- a/style.css
+++ b/style.css
@@ -36,9 +36,9 @@ body {
     display: flex;
     justify-content: center;
     
-    width: 80vw;
+    width: 70vw;
 
-    height: 850px;
+    height: 95vh;
 }
 
 /* Body e .ambiente para telas menores que 600 pixels */
@@ -50,6 +50,7 @@ body {
         margin-top: 0;
         box-shadow: none;
         width: 100vw;
+        height: 100vh;
     }
 }
 
@@ -66,7 +67,7 @@ body {
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
     
-    width: 80vw;
+    width: 70vw;
     height: 300px;
 }
 
