--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ body {
     .ambiente {
         width: 480px;
     }
+
 }
 
 .header {
@@ -69,20 +70,16 @@ body {
     justify-content: center;
     align-items: top;
     border: var(--borda-cor);
-    
-    border-top-right-radius: 60px;
-    border-top-left-radius: 60px;
-    border-bottom-right-radius: 60px;
-
-    width: 70vw;
+    box-shadow: 0px 10px #bbbde9 ;
+    width: 480vw;
     height: 200px;
 }
+
 
 /* Header para telas menores que 768 pixels */
 @media (max-width: 600px) {
     .header {
-        border-top-right-radius: 0px;
-        border-top-left-radius: 0px;
+        
         width: 100vw;
     }
 }
@@ -104,157 +101,30 @@ body {
     height:100px;
     width: 90%;
     margin-top: 10px;
+    color: #e2e5ff;
 }
 
 .menu {
-    color: white;
+    color: #e2e5ff;
     font-size: 30px;
     cursor: pointer;
 }
 
 /* Dados da API Instagram */
 .profile-pic {
-    border: 5px solid #ff92a4;
+    border: 5px solid #bbbde9;
     display: block;
     overflow: hidden;
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     background-size: cover;
+    
 }
 .profile-pic {
     background-image: url("img/profile.png");
 }
 
-.profile-box {
-    border: var(--borda-cor);
-    left: 0;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    margin-top: 140px;
-    width: 100%;
-    height:250px;
-    z-index: 99;
-}
-
-.profile-area {
-    position: fixed;
-    overflow: hidden;
-    display: flex;
-    align-items: end;
-    text-align: center;
-    background-color: #ffe9ce;
-    color: #4e4b57;
-    border-radius: 60px;
-    border-bottom-left-radius: 0;
-    margin-top: -100px;
-    width: 400px;
-    height: 200px;
-    z-index: 99;
-}
-
-
-.lua .figura {
-
-    left: 0;
-    top: 290px;
-    position: absolute;
-    width: 70px;
-    height: 100px;
-    background-color: #ffe9ce;
-
-}
-
-.lua .modelador {
-
-    left: 10px;
-    top: 305px;
-    border-radius: 50%;
-    position: absolute;
-    width: 100px;
-    height: 120px;
-    background-color: white;
-    transform: rotate(80deg);
-
-}
-.lua .modelador2 {
-
-    left: -10px;
-    top: 340px;
-    border-radius: 50%;
-    position: absolute;
-    width: 100px;
-    height: 120px;
-    background-color: white;
-    transform: rotate(80deg);
-
-}
-
-/* Design Circles */
-.elem-area {
-
-    overflow: hidden;
-    display: flex;
-    justify-content: right;
-    color: #4e4b57;
-    border-radius: 60px;
-    border-bottom-left-radius: 0px;
-    width: 100%;
-    height: 250px;
-    z-index: 99;
-}
-
-.elems01 {
-    overflow: hidden;
-    position: relative;
-    margin: 40px -19px;
-    border-top-right-radius: 60px;
-    width: 200px;
-    height: 150px;
-
-}
-.elems01 .circle01 {
-    position: relative;
-    display: flex;
-    background-color: white;
-    margin: -50px 50px 0px;
-    align-items: center;
-    justify-content: center;
-    width: 170px;
-    height: 170px;
-    border-radius: 50%;
-}
-.elems01 .circle02 {
-    
-    background-color: #ffdd83;
-    
-    
-    width: 110px;
-    height: 110px;
-    border-radius: 50%;
-    
-}
-
-.elems01 .circle03 {
-    position: absolute;
-    background-color: #4e51bf;
-    margin: -90px 8px;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    z-index: 99;
-}
-
-.elems01 .circle04 {
-    position: absolute;
-    background-color: #ff92a4;
-    margin: -20px 140px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    z-index: 99;
-}
 
 /* Dados do perfil do Instagram */
 .profile-info {
@@ -263,34 +133,31 @@ body {
     line-height: 2em;
     font-size: 20px;
     padding: 10px;
-    margin-left: 20px;
+
     display: flex;
-    justify-content: space-between;
-    border: var(--borda-cor);
-    width: 320px;
+    justify-content: center;
+    margin-left: 15px;
     height:180px;
     z-index: 99;
 }
 
-.username {
-    font-style: italic;
-    text-align: left;
-    margin-top: 20px;
-    font-size: 16px;
-}
-
 .profile-stats {
+    text-align: center;
     display: flex;
     justify-content: space-between;
-    margin-top: 15px;
-    width: 320px;
+    margin-top: 150px;
+
+    width: 380px;
+}
+
+.username {
+
+    font-size: 16px;
 }
 
 
 
 /* Links */
-
-
 .buttons {
 
     position: fixed;
@@ -299,16 +166,17 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 45px 34px;
-    margin-top: 320px;
+    margin-top: 220px;
     width: 450px;
     height: 500px;
+    
 }
 
 .btn-box {
     display: flex;
     align-items: center;
     gap: 20px;
-
+    box-shadow: 5px 5px 10px 1px #bbbde9;
     padding: 0 30px;
     width: 100%;
     height: 70px;
@@ -319,6 +187,7 @@ body {
 }
 .btn-box:hover {
     background-color: #bbbde9;
+
 }
 
 .icon {
