--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
 :root {
     --borda-cor: 1px solid #0099ff;
     --borda-cor: none;
+    --blur-on: blur(20px);
+    --blur-off: blur(0);
 }
 
 body {
@@ -26,7 +28,7 @@ body {
 
 .ambiente {
     overflow: hidden;
-    
+    filter: var(--blur-off);
     border-radius: 60px;
     box-shadow: 1px 1px 50px 0px rgb(99, 96, 96);
     background-color: white;
@@ -52,6 +54,7 @@ body {
         box-shadow: none;
         width: 100vw;
         height: 100vh;
+        border-radius: 0;
     }
 }
 
@@ -100,14 +103,15 @@ body {
     justify-content: space-between;
     height:100px;
     width: 90%;
-
     color: #e2e5ff;
 }
 
 .menu {
+    border: 1px solid red;
     color: #e2e5ff;
     font-size: 30px;
     cursor: pointer;
+    z-index: 99;
 }
 
 /* Dados da API Instagram */
@@ -128,25 +132,24 @@ body {
 
 /* Dados do perfil do Instagram */
 .profile-info {
+
     position: fixed;
     font-weight: 500;
     line-height: 2em;
     font-size: 20px;
-    padding: 10px;
-
     display: flex;
     justify-content: center;
+    margin-top: 100px;
     margin-left: 15px;
-    height:180px;
-    z-index: 99;
+    height: 80px;
+    
 }
 
 .profile-stats {
     text-align: center;
     display: flex;
     justify-content: space-between;
-    margin-top: 150px;
-
+    margin-top: -20px;
     width: 380px;
 }
 
@@ -154,7 +157,7 @@ body {
 
     font-size: 24px;
     text-shadow: 2px 2px 10px #bbbde9e8;
-    
+
 }
 
 
