--- a/style.css
+++ b/style.css
@@ -67,10 +67,11 @@ body {
 }
 
 .header {
-    background-color: #4e51bf;
+    background-color: #383847;
     position: fixed;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     align-items: top;
     border: var(--borda-cor);
     box-shadow: 0px 10px #bbbde9 ;
@@ -124,8 +125,10 @@ body {
 
 .logo-name {
 
-    font-size: 26px;
-    text-shadow: 2px 2px 10px #bbbde9e8;
+    padding: 7px;
+
+    font-size: 24px;
+    text-shadow: 1px 1px 5px #bbbde9e8;
 
 }
 
@@ -170,6 +173,34 @@ body {
     margin-top: -20px;
     width: 380px;
 }
+
+/* Faixa */
+.faixa {
+    display: flex;
+    margin-top: 90px;
+    height: 10px;
+    width: 100%;
+    background-color: #bbbde9;
+}
+
+.faixa div {
+    flex-grow: 1;
+}
+
+.faixa .a {
+    height: 10px;
+    background-color: #61606e;
+}
+.faixa .b {
+    background-color: #ffe600;
+}
+.faixa .c {
+    background-color: #ff0077;
+}
+.faixa .d {
+    background-color: #4e51bf;
+}
+
 /* Links */
 
 a {
